--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -43,129 +43,17 @@
         app:layout_constraintEnd_toEndOf="parent"
         style="@style/TextAppearance.MaterialComponents.Headline6"
         />
-
-    <androidx.cardview.widget.CardView
-        android:id="@+id/cv_car"
+    
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/rv_list_cars"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="0dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@id/tv_cars"
-        android:layout_marginTop="16dp"
-        app:cardCornerRadius="24dp"
-        app:cardBackgroundColor="@color/gray"
-        >
-        <androidx.constraintlayout.widget.ConstraintLayout
-            android:id="@+id/cl_car"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            >
-            <ImageView
-                android:id="@+id/iv_01"
-                android:layout_width="300dp"
-                android:layout_height="200dp"
-                android:src="@drawable/carro_eletrico_01"
-                android:layout_marginTop="16dp"
-                app:layout_constraintEnd_toEndOf="parent"
-                android:layout_marginEnd="16dp"
-                app:layout_constraintStart_toStartOf="parent"
-                android:layout_marginStart="16dp"
-                app:layout_constraintTop_toTopOf="parent"
-                android:contentDescription="@string/desc_iv01"
-                />
-
-            <TextView
-                android:id="@+id/tv_price"
-                android:layout_width="70dp"
-                android:layout_height="wrap_content"
-                android:text="@string/field_price"
-                style="@style/TextAppearance.AppCompat.Body2"
-                app:layout_constraintTop_toBottomOf="@id/iv_01"
-                app:layout_constraintStart_toStartOf="@id/iv_01"
-                />
-
-            <TextView
-                android:id="@+id/tv_price_val"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/field_price_val"
-                android:layout_marginStart="8dp"
-                style="@style/TextAppearance.AppCompat.Body1"
-                app:layout_constraintTop_toTopOf="@id/tv_price"
-                app:layout_constraintStart_toEndOf="@id/tv_price"
-                />
-
-            <TextView
-                android:id="@+id/tv_battery"
-                android:layout_width="70dp"
-                android:layout_height="wrap_content"
-                android:text="@string/field_battery"
-                android:layout_marginTop="4dp"
-                style="@style/TextAppearance.AppCompat.Body2"
-                app:layout_constraintTop_toBottomOf="@id/tv_price"
-                app:layout_constraintStart_toStartOf="@id/tv_price"
-                />
-
-            <TextView
-                android:id="@+id/tv_battery_val"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="8dp"
-                android:text="@string/field_battery_val"
-                style="@style/TextAppearance.AppCompat.Body1"
-                app:layout_constraintTop_toTopOf="@id/tv_battery"
-                app:layout_constraintStart_toEndOf="@id/tv_battery"
-                />
-
-            <TextView
-                android:id="@+id/tv_power"
-                android:layout_width="70dp"
-                android:layout_height="wrap_content"
-                android:text="@string/field_power"
-                android:layout_marginTop="4dp"
-                style="@style/TextAppearance.AppCompat.Body2"
-                app:layout_constraintTop_toBottomOf="@id/tv_battery"
-                app:layout_constraintStart_toStartOf="@id/tv_battery"
-                />
-
-            <TextView
-                android:id="@+id/tv_power_val"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="8dp"
-                android:text="@string/field_power_val"
-                style="@style/TextAppearance.AppCompat.Body1"
-                app:layout_constraintTop_toTopOf="@id/tv_power"
-                app:layout_constraintStart_toEndOf="@id/tv_power"
-                />
-
-            <TextView
-                android:id="@+id/tv_charge"
-                android:layout_width="70dp"
-                android:layout_height="wrap_content"
-                android:text="@string/field_charge"
-                android:layout_marginTop="4dp"
-                style="@style/TextAppearance.AppCompat.Body2"
-                app:layout_constraintTop_toBottomOf="@id/tv_power"
-                app:layout_constraintStart_toStartOf="@id/tv_power"
-                app:layout_constraintBottom_toBottomOf="parent"
-                android:layout_marginBottom="16dp"
-                />
-
-            <TextView
-                android:id="@+id/tv_charge_val"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="8dp"
-                android:text="@string/field_charge_val"
-                style="@style/TextAppearance.AppCompat.Body1"
-                app:layout_constraintTop_toTopOf="@id/tv_charge"
-                app:layout_constraintStart_toEndOf="@id/tv_charge"
-                />
-
-        </androidx.constraintlayout.widget.ConstraintLayout>
-
-    </androidx.cardview.widget.CardView>
+        app:layout_constraintBottom_toBottomOf="parent"
+        tools:listitem="@layout/car_item"
+        />
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
         android:id="@+id/fab_goto_calc"
