--- a/app/src/main/res/layout/item_car.xml
+++ b/app/src/main/res/layout/item_car.xml
@@ -21,6 +21,18 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             >
+
+            <ImageView
+                android:id="@+id/iv_favorite"
+                android:src="@drawable/favorite_01"
+                android:layout_width="24dp"
+                android:layout_height="24dp"
+                android:layout_marginEnd="24dp"
+                android:layout_marginTop="8dp"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/iv_photo"
+                />
+
             <ImageView
                 android:id="@+id/iv_photo"
                 android:layout_width="300dp"
@@ -29,8 +41,8 @@
                 app:layout_constraintEnd_toEndOf="parent"
                 android:layout_marginEnd="16dp"
                 app:layout_constraintStart_toStartOf="parent"
-                android:layout_marginStart="16dp"
                 app:layout_constraintTop_toTopOf="parent"
+                android:layout_marginStart="16dp"
                 android:contentDescription="@string/desc_iv01"
                 android:visibility="invisible"
                 tools:visibility="visible"
